; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spiffs/extr_esp_spiffs.c_vfs_spiffs_fstat.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spiffs/extr_esp_spiffs.c_vfs_spiffs_fstat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32, i64, i64, i32, i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@errno = common dso_local global i32 0, align 4
@S_IRWXU = common dso_local global i32 0, align 4
@S_IRWXG = common dso_local global i32 0, align 4
@S_IRWXO = common dso_local global i32 0, align 4
@S_IFREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, %struct.stat*)* @vfs_spiffs_fstat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfs_spiffs_fstat(i8* %0, i32 %1, %struct.stat* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.stat*, align 8
  %8 = alloca %struct.TYPE_5__, align 4
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.stat* %2, %struct.stat** %7, align 8
  %11 = load %struct.stat*, %struct.stat** %7, align 8
  %12 = call i32 @assert(%struct.stat* %11)
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %9, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i64 @SPIFFS_fstat(i32 %17, i32 %18, %struct.TYPE_5__* %8)
  store i64 %19, i64* %10, align 8
  %20 = load i64, i64* %10, align 8
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %3
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @SPIFFS_errno(i32 %25)
  %27 = call i32 @spiffs_res_to_errno(i32 %26)
  store i32 %27, i32* @errno, align 4
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @SPIFFS_clearerr(i32 %30)
  store i32 -1, i32* %4, align 4
  br label %55

32:                                               ; preds = %3
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.stat*, %struct.stat** %7, align 8
  %36 = getelementptr inbounds %struct.stat, %struct.stat* %35, i32 0, i32 4
  store i32 %34, i32* %36, align 4
  %37 = load i32, i32* @S_IRWXU, align 4
  %38 = load i32, i32* @S_IRWXG, align 4
  %39 = or i32 %37, %38
  %40 = load i32, i32* @S_IRWXO, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @S_IFREG, align 4
  %43 = or i32 %41, %42
  %44 = load %struct.stat*, %struct.stat** %7, align 8
  %45 = getelementptr inbounds %struct.stat, %struct.stat* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 8
  %46 = call i32 @vfs_spiffs_get_mtime(%struct.TYPE_5__* %8)
  %47 = load %struct.stat*, %struct.stat** %7, align 8
  %48 = getelementptr inbounds %struct.stat, %struct.stat* %47, i32 0, i32 3
  store i32 %46, i32* %48, align 8
  %49 = load %struct.stat*, %struct.stat** %7, align 8
  %50 = getelementptr inbounds %struct.stat, %struct.stat* %49, i32 0, i32 2
  store i64 0, i64* %50, align 8
  %51 = load %struct.stat*, %struct.stat** %7, align 8
  %52 = getelementptr inbounds %struct.stat, %struct.stat* %51, i32 0, i32 1
  store i64 0, i64* %52, align 8
  %53 = load i64, i64* %10, align 8
  %54 = trunc i64 %53 to i32
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %32, %22
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @assert(%struct.stat*) #1

declare dso_local i64 @SPIFFS_fstat(i32, i32, %struct.TYPE_5__*) #1

declare dso_local i32 @spiffs_res_to_errno(i32) #1

declare dso_local i32 @SPIFFS_errno(i32) #1

declare dso_local i32 @SPIFFS_clearerr(i32) #1

declare dso_local i32 @vfs_spiffs_get_mtime(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
